--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ aws-setup/
 .kiro/
 
 # Database credentials and config
-**/DatabaseConnection.php
+includes/DatabaseConnection.php
 config/database.php
 .env
 .env.local
@@ -36,6 +36,7 @@ debug-*.php
 IP-UPDATE-README.md
 GITHUB-PAGES-SOLUTION.md
 LIMPIEZA-*.md
+*TAREA-*.md
 
 # SSL and configuration temp files
 ssl-*.conf
@@ -46,6 +47,8 @@ ssl-*.conf
 setup-https.ps1
 setup-https-*.ps1
 deploy-to-ec2.ps1
+deploy-login-fix.ps1
+setup-complete-https.ps1
 *-old.ps1
 *-backup.ps1
 
@@ -75,3 +78,11 @@ plantilla.html
 # User-specific test data
 create-test-user.sql
 *-mock.php
+
+# Project management and automation scripts
+quick-update-and-deploy.ps1
+update-ip.ps1
+
+# Cache and temporary data
+data/
+/data/
